# work-time-filler

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config_template.toml  http-client.env.json.example  jira-examples.http
.cargo/: config.toml
.github/workflows/: auto-release.yml  ci.yml  manual-release.yml
doc/: AI_AGENT_GUIDELINES.md  ARCHITECTURE_ISSUES.md  BEST_PRACTICES.md  GOOGLE_OAUTH_SETUP.md
wtf-cli/: Cargo.toml
wtf-cli/src/: logger.rs  main.rs
wtf-cli/src/commands/: board.rs  config.rs  fetch.rs  github.rs  google.rs  init.rs  issue.rs  log.rs  meeting.rs  mod.rs  sprint.rs  tui.rs  update.rs  worklog.rs
wtf-cli/src/storage/: storage.rs
wtf-cli/src/tasks/: github_tasks.rs  google_tasks.rs  jira_tasks.rs  mod.rs  worklog_tasks.rs
wtf-cli/src/tui/: achievement_tracker.rs  data.rs  helpers.rs  mod.rs  tab_controller.rs  theme.rs  types.rs  ui.rs  ui_helpers.rs  wizard.rs
wtf-cli/src/tui/operations/: gap_filling.rs  github.rs  meetings.rs  mod.rs  worklogs.rs
wtf-cli/src/tui/ui/popups/: confirmations.rs  issue_selection.rs  mod.rs  other.rs  wizard.rs
wtf-cli/src/tui/ui/tabs/: achievements.rs  github.rs  history.rs  meetings.rs  mod.rs  settings.rs  sprints.rs  worklogs.rs
wtf-lib/: Cargo.toml
wtf-lib/src/: config.rs  duration.rs  lib.rs
wtf-lib/src/client/: github_client.rs  jira_client.rs  mod.rs  paginated.rs  paginated_issues.rs
wtf-lib/src/common/: common.rs
wtf-lib/src/models/: achievement.rs  data.rs  jira.rs  mod.rs  tiered_achievement.rs
wtf-lib/src/services/: achievement_service.rs  github_service.rs  google_service.rs  jira.rs  jira_service.rs  meetings_service.rs  mod.rs  tiered_achievement_service.rs  worklogs_service.rs
wtf-lib/src/storage/: database.rs
wtf-lib/src/utils/: branding.rs  meetings.rs  mod.rs  version.rs
