[package]
name = "wtf-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wtf-lib = { path = "../wtf-lib" }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = "4.5.27"
env_logger = "0.11.6"
log = "0.4.25"
async-trait = "0.1.85"
serde = { version = "1.0.217", features = ["derive"] }
once_cell = "1.20.2"
serde_json = "1.0.137"
indicatif = "0.17.9"

[[bin]]
name = "wtf"
path = "src/main.rs"
