[package]
name = "wtf-cli"
version.workspace = true
edition.workspace = true

[dependencies]
wtf-lib = { path = "../wtf-lib" }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
async-trait = "0.1.85"
indicatif = { version = "0.18.4", features = ["unicode-width"] }
chrono = "0.4.39"
anyhow = "1.0.95"
colored = "3.0.0"
tabled = { version = "0.20.0", features = ["ansi"] }
google-calendar3 = "7.0.0"
itertools = "0.14.0"
toml = "1.0.3"
inquire = "0.7.5"
shellexpand = "3.1"
futures = "0.3.31"
regex = "1.11.1"
rayon = "1.10.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
once_cell = "1.20"
ratatui-image = { version = "10.0", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.25"
log = "0.4.25"
arboard = "3.4"

[[bin]]
name = "wtf"
path = "src/main.rs"

[features]
skim = []
