[package]
name = "wtf-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.15.6"
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
base64 = "0.22.1"
urlencoding = "2.1.3"
log = "0.4.25"
indicatif = "0.17.9"
futures = "0.3.31"
