[package]
name = "wtf-lib"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
rrule = "0.13.0"
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22.1"
log = "0.4.25"
futures = "0.3.31"
sled = "0.34.7"
once_cell = "1.20.2"
bincode = "1.3.3"
google-calendar3 = "7.0.0"
yup-oauth2 = { version = "12", features = ["hyper-rustls"] }
serde_json = "1.0.138"
toml = "0.8.19"
regex = "1.11.1"
lazy_static = "1.5.0"
rand = "0.9.0"
md5 = "0.7.0"
flate2 = "1.0"
shellexpand = "3.1"
config = "0.15.19"
open = "5.3.3"
